<resources>
    <string name="app_name">QuizApp</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="github">GitHub</string>
    <string name="quiz_app">QUIZ APP</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="all_data">All Data</string>
    <string name="_3">3</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
</resources>